# casparser

./: .codecov.yml  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/scripts/: extract_files.sh
.github/workflows/: codeql-analysis.yml  pypi-publish.yml  run-pytest.yml
casparser/: __init__.py  __version__.py  cli.py  encoder.py  enums.py  exceptions.py  parser.py  process.py  regex.py  types.py
casparser/CAMS_loader/: app.py  cams_parser.py  constants.py  defaults.py  fiObject.py  fipObject.py  holdings.py  lib.py  summary.py  transaction.py  transform_CAS.py
casparser/analysis/: __init__.py  gains.py  utils.py
casparser/parsers/: __init__.py  _classify.py  _investor.py  _isin.py  cams_detailed.py  cams_summary.py  cdsl.py  detect.py  extract.py  mupdf.py  nsdl.py  pageobj.py  pdfminer.py  utils.py
casparser/process/: __init__.py  cas_detailed.py  cas_summary.py  cdsl_statement.py  dp_statement.py  nsdl_statement.py  regex.py  utils.py
schema/: CASData.schema.json  NSDLCASData.schema.json
scripts/: generate_schema.py
tests/: _assertions.py  base.py  conftest.py  files.enc  test_cams.py  test_cdsl.py  test_demat_units.py  test_errors.py  test_gains.py  test_gains_e2e.py  test_helpers.py  test_kfin.py  test_mupdf.py  test_nsdl.py  test_pdfminer.py  test_process.py  test_schema_docs.py
tests/casparser/: test_cli.py
