[project]
name = "casparser"
description = "(Karvy/Kfintech/CAMS) Consolidated Account Statement (CAS) PDF parser"
authors = [{ name = "Sandeep Somasekharan", email = "codereverser@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "casparser-isin>=2025.2.28",
    "click>=7.0,<9.0",
    "colorama>=0.4.6,<0.5",
    "pdfminer.six==20240706",
    "python-dateutil>=2.8.2,<3",
    "rich>=13.5.2,<14",
    "pydantic>=2.3.0,<3",
]
dynamic = ["version"]

[project.optional-dependencies]
mupdf = ["PyMuPDF>=1.24.0,<1.25.0"]
fast = ["PyMuPDF>=1.24.0,<1.25.0"]

[project.urls]
Homepage = "https://github.com/codereverser/casparser"

[project.scripts]
casparser = "casparser.cli:cli"

[dependency-groups]
dev = [
    "coverage[toml]>=7.3.0,<8",
    "ipython>=8.31.0,<9",
    "pytest>=8.0.0,<9",
    "pytest-cov~=6.0.0",
    "pre-commit>=4.0.0,<5",
]

[tool.hatch.build.targets.sdist]
include = ["casparser/*"]

[tool.hatch.build.targets.wheel]
include = ["casparser/*"]

[tool.hatch.version]
path = "casparser/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=casparser --cov-report=xml --cov-report=html --exitfirst"
testpaths = [
    "tests",
]

[tool.coverage.report]
omit = [
    "casparser/cli.py"
]
precision = 3

[tool.coverage.run]
omit = [
    "casparser/cli.py"
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
