[project]
name = "casparser"
description = "(CAMS/KFintech/NSDL/CDSL) Consolidated Account Statement (CAS) PDF parser"
authors = [{ name = "Sandeep Somasekharan", email = "codereverser@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "casparser-isin>=2026.5.1",
    "click>=8.0,<10",
    "colorama>=0.4.6,<1",
    # pypdfium2 ships a vendored C lib; we use the raw ctypes surface
    # (FPDFText_GetCharOrigin etc.), so cap a major ahead to catch
    # breaking ABI bumps before they hit users.
    "pypdfium2>=5.0,<7",
    "python-dateutil>=2.8.2,<3",
    "rich>=13.5.2,<16",
    "pydantic>=2.3.0,<3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/codereverser/casparser"

[project.scripts]
casparser = "casparser.cli:cli"

[dependency-groups]
dev = [
    "coverage[toml]>=7.3.0,<9",
    "ipython>=8.31.0",
    "pytest>=8.0.0,<10",
    "pytest-cov>=6.0,<8",
    "pre-commit>=4.0.0,<5",
]

[tool.hatch.build.targets.sdist]
include = ["casparser/*"]

[tool.hatch.build.targets.wheel]
include = ["casparser/*"]

[tool.hatch.version]
path = "casparser/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=casparser --cov-report=xml --cov-report=html --exitfirst"
testpaths = [
    "tests",
]

[tool.coverage.report]
omit = [
    "casparser/cli.py"
]
precision = 3

[tool.coverage.run]
omit = [
    "casparser/cli.py"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
