[metadata]
name = casparser
version = file:casparser/VERSION.txt
description = (Karvy/Kfintech/CAMS) Consolidated Account Statement (CAS) PDF parser
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Sandeep Somasekharan
author_email = codereverser@gmail.com
url = https://github.com/codereverser/casparser
keywords = pdf, parser, cas, cams, karvy, kfintech
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    casparser-isin>=2021.3.1
    click==7.1.2
    colorama==0.4.4
    pdfminer.six==20201018
    python-dateutil==2.8.1
    tabulate==0.8.9
    wcwidth==0.2.5

[options.entry_points]
console_scripts =
    casparser = casparser.cli:cli

[options.extras_require]
mupdf = PyMuPDF==1.18.9
test = pytest-cov>=2.11.1; coverage>=5.5; pytest>=6.2.2

[flake8]
max-line-length = 100

[coverage:report]
precision = 2